--- a/documentation/demos/demo12/box2d_org.html
+++ b/documentation/demos/demo12/box2d_org.html
@@ -100,7 +100,7 @@
 
                 // get modules, and solve their dependencies.
                 bring([
-
+                    "Lib/Box2dWeb-2.1.a.3.js",
                     "CAAT.Foundation.Director",
                     "CAAT.Foundation.Actor",
                     "CAAT.Foundation.ActorContainer",
