--- a/documentation/tutorials/menu/menu.html
+++ b/documentation/tutorials/menu/menu.html
@@ -15,6 +15,7 @@
     <li class="indented"><a href="02_CAAT_Foundation_Actor_Transformations.html">Transformations</a></li>
     <li class="indented"><a href="02_CAAT_Foundation_Actor_Behaviors.html">Behaviors</a></li>
     <li class="indented"><a href="02_CAAT_Foundation_Actor_BgImages.html">Background Image</a></li>
+    <li class="indented"><a href="02_CAAT_Foundation_Actor_BgImagesSprites.html">Sprite Management</a></li>
     <li class="indented"><a href="02_CAAT_Foundation_Actor_PaintMethod.html">Paint Method</a></li>
     <li class="indented"><a href="02_CAAT_Foundation_Actor_CacheAsBitmap.html">Caching as Bitmap</a></li>
     <li class="indented"><a href="02_CAAT_Foundation_Actor_Clip.html">Clipping</a></li>
@@ -72,7 +73,7 @@
 
     <li><a href="t12.html">Constants</a></li>
 
-<h3>TBD</h3>
+<h3>TB Documented</h3>
 
     <li class="indented"><a href="#">Color utils</a>
     <li class="indented"><a href="#">Image preloader</a>
@@ -85,5 +86,5 @@
 
 <h1>Demos & Games</h1>
 <ul>
-    <li><a href="../demos/demo1/path.html">Demos and Games</a></li>
+    <li><a href="../demos/demo1/path_org.html">Demos and Games</a></li>
 </ul>
