--- a/documentation/tutorials/t10-3.html
+++ b/documentation/tutorials/t10-3.html
@@ -75,7 +75,7 @@
                 <p>
                     Another feature of an actor sprite image is the call to the method <span class="apicode">
                     actor.setImageTransformation( value )</span>. Values can be the following <span class="apicode">
-                    CAAT.SpriteImage.prototype</span>.
+                    CAAT.Foundation.SpriteImage</span>.
                     <li>TR_FLIP_HORIZONTAL: invert horizontally.</li>
                     <li>TR_FLIP_VERTICAL: invert vertically.</li>
                     <li>TR_FLIP_ALL: invert vertical and horizontally at the same time.</li>
