--- a/documentation/tutorials/t12.html
+++ b/documentation/tutorials/t12.html
@@ -119,6 +119,17 @@
                 </p>
             </div>
 
+            <div>
+                <p>
+                    <span class="apicode">CAAT.RETINA_DISPLAY_ENABLED</span>
+                </p>
+                <p>
+                    If not false, CAAT will honor retina display and HIDPI screens behind the scenes.
+                    This will set up a bigger as needed canvas object and set up appropriate scale
+                    operations for drawing purposes.
+                </p>
+            </div>
+
 
         </div>
     </div>
