--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -41,6 +41,8 @@
     <li><a href="../demo27/font.html">CAAT.Font</a></li>
     <li><a href="../demo28/paint.html">Paint</a></li>
     <li><a href="../demo29/layout2.html">Auto Layout</a></li>
+    <li><a href="../demo30/fonts.html">Text Actor</a></li>
+    <li><a href="../demo31/sprites.html">Sprite Management</a></li>
 </ul>
        
 <h1>Tutorial</h1>
