--- a/documentation/tutorials/index.html
+++ b/documentation/tutorials/index.html
@@ -48,38 +48,42 @@
             </p>
             <div id="menu-index">
                 <ul>
-                    <li><a href="t1.html">Getting Started</a></li>
+                    <li><a href="t0.html">Index</a></li>
 
-                    <li><a href="structure.html">CAAT Actor and Container structure</a></li>
+                    <li><a href="01_getting_started.html">Getting Started</a></li>
 
-                    <li><a href="t2.html">CAAT.Actor internals. This is the base object.</a></li>
-                        <li class="indented"><a href="t2-1.html">Mouse Events</a></li>
-                        <li class="indented"><a href="t2-10.html">Touch Events</a></li>
-                        <li class="indented"><a href="t2-2.html">Life cycle</a></li>
-                        <li class="indented"><a href="t2-3.html">Transformations</a></li>
-                        <li class="indented"><a href="t2-4.html">Behaviors</a></li>
-                        <li class="indented"><a href="t2-5.html">Background Image</a></li>
-                        <li class="indented"><a href="t2-6.html">Paint Method</a></li>
-                        <li class="indented"><a href="t2-7.html">Caching as Bitmap</a></li>
-                        <li class="indented"><a href="t2-8.html">Clipping</a></li>
-                        <li class="indented"><a href="t2-9.html">Behave as a Button</a></li>
-                        <li class="indented">Coordinate system: modelToView, viewToModel, modelToModel</li>
+                    <li><a href="00_Structure.html">CAAT structure</a></li>
+                    <li><a href="00_Structure_modules.html">CAAT.Module</a></li>
+                    <li><a href="00_Structure_ModuleManager.html">CAAT.ModuleManager</a></li>
 
+                    <li><a href="02_CAAT_Foundation_Actor.html">CAAT.Foundation.Actor</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_Events.html">Events</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_Multitouch.html">Multitouch events</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_LifeCycle.html">Life cycle</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_Transformations.html">Transformations</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_Behaviors.html">Behaviors</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_BgImages.html">Background Image</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_BgImagesSprites.html">Sprite Management</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_PaintMethod.html">Paint Method</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_CacheAsBitmap.html">Caching as Bitmap</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_Clip.html">Clipping</a></li>
+                    <li class="indented"><a href="02_CAAT_Foundation_Actor_SetAsButton.html">Behave as a Button</a></li>
 
-                    <li><a href="t3.html">CAAT.ActorContainer. How to layer entities.</a></li>
-                        <li class="indented"><a href="t3-1.html">Adding actors</a></li>
-                        <li class="indented"><a href="t3-2.html">Z indexing</a></li>
-                        <li class="indented">Alpha</li>
+                    <li><a href="03_CAAT_Foundation_ActorContainer.html">CAAT.Foundation.ActorContainer</a></li>
+                    <li class="indented"><a href="03_CAAT_Foundation_ActorContainer_AddChildren.html">Adding actors</a></li>
+                    <li class="indented"><a href="03_CAAT_Foundation_ActorContainer_Operations.html">Z indexing</a></li>
+                    <li class="indented"><a href="03_CAAT_Foundation_ActorContainer_Layout.html">Layout</a></li>
 
-                    <li><a href="t4.html">CAAT.Director. The system entry point.</a></li>
-                        <li class="indented"><a href="t4-1.html">Time line hooks</a>
-                        <li class="indented"><a href="t4-2.html">Background Clean</a>
-                        <li class="indented"><a href="t4-3.html">Adding resources</a>
-                        <li class="indented"><a href="t4-4.html">Switching Scenes</a>
-                        <li class="indented"><a href="t4-5.html">Utils</a>
-                        <li class="indented"><a href="t4-6.html">Resize events</a>
-                        <li class="indented"><a href="t4-7.html">Keyboard events</a>
-                        <li class="indented"><a href="t4-8.html">Accelerometer events</a>
+                    <li><a href="04_CAAT_Foundation_Director.html">CAAT.Foundation.Director</a></li>
+                    <li class="indented"><a href="04_CAAT_Foundation_Director_TimelineCallbacks.html">Time line callbacks</a>
+                    <li class="indented"><a href="04_CAAT_Foundation_Director_ClearBackground.html">Background Clean</a>
+                    <li class="indented"><a href="04_CAAT_Foundation_Director_DirtyRects.html">Dirty Rects</a>
+                    <li class="indented"><a href="t4-3.html">Adding resources</a>
+                    <li class="indented"><a href="t4-4.html">Switching Scenes</a>
+                    <li class="indented"><a href="t4-5.html">Utils</a>
+                    <li class="indented"><a href="t4-6.html">Resize events</a>
+                    <li class="indented"><a href="t4-7.html">Keyboard events</a>
+                    <li class="indented"><a href="t4-8.html">Accelerometer events</a>
 
                     <li><a href="t5.html">CAAT.Scene. Independent animation stages.</a></li>
                         <li class="indented"><a href="t5-1.html">Time line hooks</a>
