--- a/documentation/demos/demo2/fishpond_org.html
+++ b/documentation/demos/demo2/fishpond_org.html
@@ -100,7 +100,7 @@ CAAT.DEBUG=1;
                 setModulePath("CAAT.Module",            "Modules").
                 setModulePath("CAAT.WebGL",             "WebGL").
 
-                setModulePath("CAAT.Procedural",        "../demos/demo2").
+                setModulePath("CAAT.Procedural",        "../documentation/demos/demo2").
 
                 // get modules, and solve their dependencies.
                 bring(
