--- a/documentation/demos/demo12/box2d_org.html
+++ b/documentation/demos/demo12/box2d_org.html
@@ -54,6 +54,7 @@
 
 <script type="text/javascript" src="../menu/menu.js"></script>
 <script src="../../../src/Core/ModuleManager.js"></script>
+<script src="../../../src/Lib/Box2dWeb-2.1.a.3.js"></script>
 
 <script type="text/javascript">
     /**
@@ -100,7 +101,6 @@
 
                 // get modules, and solve their dependencies.
                 bring([
-                    "Lib/Box2dWeb-2.1.a.3.js",
                     "CAAT.Foundation.Director",
                     "CAAT.Foundation.Actor",
                     "CAAT.Foundation.ActorContainer",
