--- a/documentation/demos/demo8/hierarchy_org.html
+++ b/documentation/demos/demo8/hierarchy_org.html
@@ -55,7 +55,7 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script src="../../../src/core/ModuleManager.js"></script>
+<script src="../../../src/Core/ModuleManager.js"></script>
 
 <script type="text/javascript">
     /**
