--- a/documentation/demos/demo19/collision.html
+++ b/documentation/demos/demo19/collision.html
@@ -121,7 +121,7 @@
                         "CAAT.Foundation.UI.StarActor",
 
                         "CAAT.Module.Collision.SpatialHash",
-                        "CAAT.Module.Collision.QuadTree",
+                        "CAAT.Module.Collision.Quadtree",
 
                         "CAAT.Math.Point",
                         "CAAT.Math.Rectangle",
