--- a/documentation/demos/demo29/layout2.html
+++ b/documentation/demos/demo29/layout2.html
@@ -132,7 +132,7 @@
 
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script src="../../../src/core/ModuleManager.js"></script>
+<script src="../../../src/Core/ModuleManager.js"></script>
 
 <script type="text/javascript">
     /**
