--- a/documentation/demos/demo30/fonts.html
+++ b/documentation/demos/demo30/fonts.html
@@ -64,7 +64,7 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script src="../../../src/core/ModuleManager.js"></script>
+<script src="../../../src/Core/ModuleManager.js"></script>
 
 <script type="text/javascript">
     /**
