--- a/documentation/demos/demo30/fonts.html
+++ b/documentation/demos/demo30/fonts.html
@@ -26,34 +26,18 @@
         </div>
         <div id="experiment">
             <div style="text-align:center">
-                <h1>Path management</h1>
+                <h1>CAAT.Foundation.UI.TextActor vs ctx.drawString</h1>
             </div>
             <div id="experiment-holder">
                 <canvas id="experiment-canvas"></canvas>
             </div>
             <div id="experiment-description">
                 <div>
-                    <p>Controls:</p>
-                    <ul>
-                        <li>Drag path handles.</li>
-                        <li>Click on interpolators to traverse the path with different velocities.</li>
-                    </ul>
-                </div>
-                <div>
                     <p>
                         This demo features the following elements:
                     </p>
                     <ul>
-                        <li>Constructing a Path and adding segments to it.</li>
-                        <li>Setting positional anchors.</li>
-                        <li>What does a call to <code>closePath</code> means in opposition to <code>endPath</code>.</li>
-                        <li>Showing a path by associating it to a PathActor.</li>
-                        <li>Path management by calling setInteractive method.</li>
-                        <li>CAAT.Interpolator on path behavior.</li>
-                        <li>CompoundImage management.</li>
-                        <li>SpriteActor definition.</li>
-                        <li>Show interpolators by Wrapping them into InterpolatorActor.</li>
-                        <li>Management of CAAT.Dock actor to elegantly show interpolators.</li>
+                        <li>CAAT.Foundation.UI.TextActor mimics perfectly text drawn with drawString</li>
                     </ul>
                 </div>
             </div>
