--- a/documentation/demos/demo12/box2d_org.html
+++ b/documentation/demos/demo12/box2d_org.html
@@ -53,7 +53,7 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script src="../../../src/Lib/Box2dWeb-2.1.a.3.js"></script>
+<script src="../../../src/Lib/Box2D.js"></script>
 <script src="../../../src/Core/ModuleManager.js"></script>
 
 
