--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <script src="../../track.js" type="text/javascript"></script>
+    <script src="../track.js" type="text/javascript"></script>
         <title>-- CAAT examples index --</title>
 
         <link rel="stylesheet" href="style/demo.css">
