--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <script src="../../track.js" type="text/javascript"></script>
+    <script src="../track.js" type="text/javascript"></script>
         <title>-- CAAT examples index --</title>
 
         <link rel="stylesheet" href="style/demo.css">
@@ -28,11 +28,11 @@
     <li><a href="demo14/timers_org.html">Timers</a></li>
     <li><a href="demo15/logofrenzy_org.html">SpriteImage</a></li>
     <li><a href="demo16/mask_org.html">Masking</a></li>
-    <li><a href="demo17/video_org.html">Video</a></li>
+    <li><a href="demo17/video_org.html">Video Tag</a></li>
     <li><a href="demo18/keys_org.html">Keyboard management</a></li>
     <li><a href="demo19/collision.html">Collision detection</a></li>
-    <li><a href="demo20/flightcontrol.html">Flight Control</a></li>
-    <li><a href="demo21/vvv.html">Tiles Engine</a></li>
+    <li><a href="demo20/flightcontrol.html">Flight control</a></li>
+    <li><a href="demo21/vvv.html">Tiles engine</a></li>
     <li><a href="demo22/multitouch.html">Multitouch</a></li>
     <li><a href="demo23/actionTo.html">Action To</a></li>
     <li><a href="demo24/path.html">Path compositing</a></li>
@@ -40,6 +40,8 @@
     <li><a href="demo27/font.html">CAAT.Font</a></li>
     <li><a href="demo28/paint.html">Paint</a></li>
     <li><a href="demo29/layout2.html">Auto Layout</a></li>
+    <li><a href="demo30/fonts.html">Text Actor</a></li>
+    <li><a href="demo31/sprites.html">Sprite Management</a></li>
 
 </ul>
 
