--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_Foundation_Scene.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_Foundation_Scene.js.html
@@ -78,7 +78,7 @@
 <span class='line'> 71</span> </span><span class="COMM">//            },</span><span class="WHIT">
 <span class='line'> 72</span> </span><span class="WHIT">            </span><span class="COMM">/**
 <span class='line'> 73</span>              * Helper method to manage alpha transparency fading on Scene switch by the Director.
-<span class='line'> 74</span>              * @param time {number} time in milliseconds the fading will take.
+<span class='line'> 74</span>              * @param time {number} time in milliseconds then fading will taableIne.
 <span class='line'> 75</span>              * @param isIn {boolean} whether this Scene is being brought in.
 <span class='line'> 76</span>              *
 <span class='line'> 77</span>              * @private
