--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -43,6 +43,7 @@
     <li><a href="../demo29/layout2.html">Auto Layout</a></li>
     <li><a href="../demo30/fonts.html">Text Actor</a></li>
     <li><a href="../demo31/sprites.html">Sprite Management</a></li>
+    <li><a href="../demo32/svgpath.html">SVG Path parser</a></li>
 </ul>
        
 <h1>Tutorial</h1>
