* Added parsing capabilities to CAAT.Behavior.*Behavior and CAAT.Behavior.Interpolator objects.

--- a/documentation/demos/demo32/svgpath.html
+++ b/documentation/demos/demo32/svgpath.html
@@ -42,9 +42,7 @@
                         This demo features the following elements:
                     </p>
                     <ul>
-                        <li>Build paths out of base primitives.</li>
-                        <li>Combine paths to build a more complex one.</li>
-                        <li>Set an actor to traverse a path in a given amount of time.</li>
+                        <li>Build paths from SVG representation.</li>
                     </ul>
                 </div>
             </div>
