added retina mode (CAAT.RETINA_DISPLAY_ENABLED=true;)

--- a/documentation/demos/demo1/path_org.html
+++ b/documentation/demos/demo1/path_org.html
@@ -91,6 +91,7 @@
      * THE SOFTWARE.
      *
      */
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
