--- a/documentation/demos/demo12+1/transitions_org.html
+++ b/documentation/demos/demo12+1/transitions_org.html
@@ -77,6 +77,7 @@
      */
 
     CAAT.DEBUG=1;
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
