--- a/documentation/demos/demo12/box2d_org.html
+++ b/documentation/demos/demo12/box2d_org.html
@@ -83,6 +83,8 @@
      * THE SOFTWARE.
      *
      */
+
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
 
         window.addEventListener('load', load, false);
