--- a/documentation/demos/demo20/flightcontrol.html
+++ b/documentation/demos/demo20/flightcontrol.html
@@ -82,7 +82,7 @@
      *
      */
 
-
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         CAAT.DEBUG=1;
         window.addEventListener('load',load,false);
