--- a/documentation/demos/demo21/vvv.html
+++ b/documentation/demos/demo21/vvv.html
@@ -68,6 +68,7 @@
         return 0;
     };
 
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
 
         CAAT.TileMapViewport= function() {
