--- a/documentation/demos/demo25/flipcards.html
+++ b/documentation/demos/demo25/flipcards.html
@@ -84,6 +84,7 @@
      *
      */
 
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         window.addEventListener('load', load, false);
 
