--- a/documentation/demos/demo29/layout2.html
+++ b/documentation/demos/demo29/layout2.html
@@ -160,7 +160,8 @@
      * THE SOFTWARE.
      *
      */
-CAAT.DEBUG=1;
+    CAAT.DEBUG=1;
+    CAAT.RETINA_DISPLAY_ENABLED=true;
 
     (function() {
 
