--- a/documentation/demos/demo5/text-on-path_org.html
+++ b/documentation/demos/demo5/text-on-path_org.html
@@ -86,6 +86,7 @@
      *
      */
 
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
 
         window.addEventListener('load',load,false);
