--- a/documentation/demos/demo8/hierarchy_org.html
+++ b/documentation/demos/demo8/hierarchy_org.html
@@ -84,6 +84,7 @@
      *
      */
 
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
