--- a/documentation/demos/demo10/garden_org.html
+++ b/documentation/demos/demo10/garden_org.html
@@ -76,6 +76,7 @@
      *
      */
 
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
