--- a/documentation/demos/demo16/mask_org.html
+++ b/documentation/demos/demo16/mask_org.html
@@ -83,7 +83,7 @@
      *
      */
 
-
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
