--- a/documentation/demos/demo24/path.html
+++ b/documentation/demos/demo24/path.html
@@ -83,8 +83,7 @@
      *
      */
 
-
-
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
 
         window.addEventListener('load', load, false);
