--- a/documentation/demos/demo26/hierarchy2.html
+++ b/documentation/demos/demo26/hierarchy2.html
@@ -82,6 +82,7 @@
      *
      */
 
+CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
