--- a/documentation/demos/demo3/sprites_org.html
+++ b/documentation/demos/demo3/sprites_org.html
@@ -87,6 +87,7 @@
      *
      */
 
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
