--- a/documentation/demos/demo30/fonts.html
+++ b/documentation/demos/demo30/fonts.html
@@ -76,6 +76,8 @@
      * THE SOFTWARE.
      *
      */
+
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
