--- a/documentation/demos/demo9/behaviors_org.html
+++ b/documentation/demos/demo9/behaviors_org.html
@@ -83,6 +83,7 @@
      *
      */
 
+    CAAT.RETINA_DISPLAY_ENABLED=true;
     (function() {
         /**
          * Startup it all up when the document is ready.
